--- a/style.css
+++ b/style.css
@@ -11,42 +11,6 @@ body {
     margin: 0 auto;
 }
 
-.navbar {
-    background-color: #8b8787;
-    color: white;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    padding: 10px;
-}
-
-.navbar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    
-   
-}
-
-.navbar li {
-    display: inline;
-    margin-right: 20px;
-    float: left;
-}
-
-.navbar li a{
-    display: block;
-  color: white;
-  text-align: center;
-  padding: 4px 16px;
-  text-decoration: none;
-}
-
-.navbar li a:hover{
-    background-color: #111;
-}
-
 .slider {
     height: auto;
 }
@@ -57,14 +21,14 @@ body {
 }
 
 .footer {
-    background-color: rgb(63, 45, 45);
+    background-color: rgb(48, 37, 77);
    /* color: #fff;*/
     padding: 20px 0;
 }
 
 .footer-columns {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .contact,
